Various minor changes and typo fixes in MA 1-10.

--- a/01_agama/madhyama/MA_002.md
+++ b/01_agama/madhyama/MA_002.md
@@ -50,13 +50,13 @@ next: MA_003.html
 12\. “Furthermore, once perception and contemplation have stopped, the noble disciple has an inner stillness and unified mind. Without perception or contemplation, this concentration produces joy and happiness, and he attains accomplishment of the second dhyāna. The noble disciple then is called ‘growing webs [of buds].’ He’s like the Trāyastriṃśa Heaven’s pārijāta tree growing webs [of buds].
 {: #p12}
 
-13\. “Furthermore, the noble disciple parts with joy and desire, and he arrives at equanimity and pursues nothing. With right mindfulness and right knowledge, he personally experiences the happiness which is described by nobles as noble equanimity, mindfulness, happy abiding, and emptiness,[\[11\]](#n11){:#ref11} and he attains accomplishment of the third dhyāna. The noble disciple then is called ‘growing [buds] like bird beaks.’ He’s like the Trāyastriṃśa Heaven’s pārijāta tree growing [buds] like bird beaks.
+13\. “Furthermore, the noble disciple parts with joy and desire, and he arrives at equanimity and pursues nothing. With right mindfulness and right knowledge, he personally experiences the happiness which is described by noble people as noble equanimity, mindfulness, happy abiding, and emptiness,[\[11\]](#n11){:#ref11} and he attains accomplishment of the third dhyāna. The noble disciple then is called ‘growing [buds] like bird beaks.’ He’s like the Trāyastriṃśa Heaven’s pārijāta tree growing [buds] like bird beaks.
 {: #p13}
 
 14\. “Furthermore, the noble disciple’s pleasure ceases and his pain ceases. The basis of joy and sorrow having ceased, he’s neither discomforted nor delighted. Equanimous, mindful, and pure, he attains accomplishment of the fourth dhyāna. The noble disciple then is called ‘growing like a bowl.’ He’s like the Trāyastriṃśa Heaven’s pārijāta tree [buds growing] like bowls.
 {: #p14}
 
-15\. “Furthermore, once the noble disciple’s contaminants have ended, his mind is liberated, and his wisdom is liberated. In the present life, he knows and recognizes for himself the accomplishment of this realization: ‘Birth has been ended, the religious practice has been established, the task has been accomplished, and I know as it really is that I’m no longer subject to existence.’ The noble disciple then is called ‘in full bloom.’ They’re like the Trāyastriṃśa Heaven’s pārijāta tree in full bloom.
+15\. “Furthermore, once the noble disciple’s contaminants have ended, his mind is liberated, and his wisdom is liberated. In the present life, he knows and recognizes for himself the accomplishment of this realization: ‘Birth has been ended, the religious practice has been established, the task has been accomplished. I truly know that I’m no longer subject to existence.’ The noble disciple then is called ‘in full bloom.’ They’re like the Trāyastriṃśa Heaven’s pārijāta tree in full bloom.
 {: #p15}
 
 #### Conclusion
@@ -88,7 +88,7 @@ next: MA_003.html
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 14 February 2021
+Last Revised: 17 March 2021
 {: .revised}
 
 ---
