--- a/01_agama/madhyama/MA_005.md
+++ b/01_agama/madhyama/MA_005.md
@@ -123,7 +123,7 @@ The monks then answered, “We see it, Bhagavān!”
 
 #### 6. The Hot Iron Bed and the Sofa
 
-34\. The Bhagavān again addressed the monks, “What do you think? Suppose there’s a strong man who forces you to sit or lay on a metal bed that’s glowing and flaming hot. Suppose you were to accept a faithful gift of a bed or sofa to lay on from a warrior, priest, householder, or worker. Which would be pleasant?
+34\. The Bhagavān again addressed the monks, “What do you think? Suppose there’s a strong man who forces you to sit or lay on a metal bed that’s glowing and flaming hot. Suppose you were to accept a faithful gift of a bed or sofa to lay on from a warrior, priest, householder, or worker. Which would be pleasant?”
 {: #p34}
 
 35\. The monks then said, “Bhagavān, if a strong man forced us sit or lay on a metal bed that’s glowing and flaming hot, that would be very painful! Bhagavān, suppose we were to accept a faithful gift of a bed or sofa to lay on from a warrior, priest, householder, or worker. That would be very pleasant, Bhagavān.”
@@ -175,7 +175,7 @@ The monks then answered, “We see it, Bhagavān!”
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 25 February 2021
+Last Revised: 17 March 2021
 {: .revised}
 
 ---
