--- a/01_agama/madhyama/MA_008.md
+++ b/01_agama/madhyama/MA_008.md
@@ -17,6 +17,8 @@ next: MA_009.html
 2\. It was then that the Bhagavān addressed the monks, All conditioned things are impermanent. They are things that don’t last, that soon change, and that are unreliable. Such conditioned things must not be objects of attachment, or they will torment a person. You must seek separation and liberation from them. Why is that?  
 {:#p2}
 
+#### The Seven Suns Parable
+
 3\. “During times of drought when there’s no rain, all the trees, the hundred grains, and medicinal plants wither, crumble, and disappear. They can’t always be present; therefore, all conditioned things are impermanent. They are things that don’t last, that soon change, and that are unreliable. Such conditioned things must not be objects of attachment, or they will torment a person. You must seek separation and liberation from them.
 {:#p3}
 
@@ -47,7 +49,9 @@ next: MA_009.html
 12\. “Now, I’ve described for you how Mount Sumeru will crumble and disintegrate, but who is there who’d believe it? Only those who see truly. Now, I’ve described for you how the ocean water will dry up completely, but who is there who’d believe it? Only those who see truly. Now, I’ve described for you how the whole earth will be burned up, but who is there who’d believe it? Only those who see truly.
 {:#p12}
 
-13\. “What do you think, monks? Once, there was a great teacher named Sunetra[\[5\]](#n5){: #ref5} who taught in a tradition of sages from another religion. He abandoned craving and attained the miraculous abilities. That great teacher Sunetra had measureless hundreds of thousands of disciples. When he taught them the way of the Brahma world, if his disciples didn’t completely approve of his teaching, then they were sometimes born in the Heaven of the Four Kings, the Trāyastriṃśa Heaven, the Yama Heaven, the Tuṣita Heaven, the Nirmāṇarati Heaven, or the Paranirmitavaśavartin Heaven when their lives ended. If his disciples did completely approve of his teaching of the way of the Brahma world, they cultivated the four abodes of Brahmā, abandoned their desires, and were born in the Brahma heavens when their lives ended.
+#### The Sunetra Birth Story
+
+13\. “Why is that? Monks, there once was a great teacher named Sunetra[\[5\]](#n5){: #ref5} who taught in a tradition of sages from another religion. He abandoned craving and attained the miraculous abilities. That great teacher Sunetra had measureless hundreds of thousands of disciples. When he taught them the way of the Brahma world, if his disciples didn’t completely approve of his teaching, then they were sometimes born in the Heaven of the Four Kings, the Trāyastriṃśa Heaven, the Yama Heaven, the Tuṣita Heaven, the Nirmāṇarati Heaven, or the Paranirmitavaśavartin Heaven when their lives ended. If his disciples did completely approve of his teaching of the way of the Brahma world, they cultivated the four abodes of Brahmā, abandoned their desires, and were born in the Brahma Heaven when their lives ended.
 {:#p13}
 
 14\. “At the time, that teacher Sunetra thought, ‘Shouldn’t I and my disciples be born in the same place in a later life? Now, I’d better cultivate increasing kindness. After cultivating increasing kindness, I’ll be born among the Ābhāsvara gods.’ Sunetra then cultivated increasing kindness. After cultivating it, he was born among the Ābhāsvara gods when his life ended. That path of training of Sunetra and his disciples wasn’t in vain. They did attain a great result from it.
@@ -84,7 +88,7 @@ next: MA_009.html
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 8 March 2021
+Last Revised: 17 March 2021
 {: .revised}
 
 ---
