--- a/01_agama/madhyama/MA_010.md
+++ b/01_agama/madhyama/MA_010.md
@@ -97,7 +97,7 @@ next: MA_011.html
 25\. “Suppose someone uses food not for profit, not because of pride, and not for the rich pleasure of it but only to make his body long-lasting, to remove affliction and grief, to practice the religious life, to end an illness and prevent new illnesses, and to abide in comfort and without illness for a long time.
 {:#p25}
 
-26\. “Suppose someone uses a house, a hut, a floor, or a bed not for profit, not because of pride, and not for ornamentation but only for rest from weariness and to sit quietly.
+26\. “Suppose someone uses a house, a hut, a seat, or a bed not for profit, not because of pride, and not for ornamentation but only for rest from weariness and to sit quietly.
 {:#p26}
 
 27\. “Suppose someone uses hot water and medicine not for profit, not because of pride, and not for the rich pleasure of it but only to remove illness and discomfort, to manage their vitality, and to be comfortable and without illness. If someone doesn’t use these things, affliction and grief will arise. When they use them, affliction and grief won’t arise. This is called stopping the contaminants by using.
@@ -138,7 +138,7 @@ next: MA_011.html
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 8 March 2021
+Last Revised: 17 March 2021
 {: .revised}
 
 ---
