--- a/01_agama/madhyama/MA_006.md
+++ b/01_agama/madhyama/MA_006.md
@@ -63,7 +63,7 @@ The monks then accepted the teaching and listened.
 13\. “Furthermore, a monk’s practice ought to be thus: ‘I have no self, and nothing is mine. In the future, there’ll be no self, and nothing will be mine.’ He then ends what has been, and he attains equanimity after ending it. The pleasures he has don’t stain him, and he doesn’t cling to what has come together. Such a practitioner sees by the wisdom of unsurpassed stillness, [427c] but he has yet to attain its realization.
 {: #p13}
 
-14\. “Where will a monk go who practices in this way? It’s like striking an iron that’s glowing and flaming hot with a hammer, and a spark flies off it. It falls onto a little wood or grass that smokes or burns, and then goes out after burning it up completely. You should know that monk to be likewise. With a little conceit that’s yet to end, he has cut the five lower bonds and will attain parinirvāṇa without practice. This is called the sixth place to which a good person goes. The world in truth does have such people
+14\. “Where will a monk go who practices in this way? It’s like striking an iron that’s glowing and flaming hot with a hammer, and a spark flies off it. It falls onto much wood or grass that smokes or burns, and then goes out after burning it up completely. You should know that monk to be likewise. With a little conceit that’s yet to end, he has cut the five lower bonds and will attain parinirvāṇa without practice. This is called the sixth place to which a good person goes. The world in truth does have such people
 {: #p14}
 
 #### 7. Like a Spark that Burns Up a Large Area
@@ -71,7 +71,7 @@ The monks then accepted the teaching and listened.
 15\. “Furthermore, a monk’s practice ought to be thus: ‘I have no self, and nothing is mine. In the future, there’ll be no self, and nothing will be mine.’ He then ends what has been, and he attains equanimity after ending it. The pleasures he has don’t stain him, and he doesn’t cling to what has come together. Such a practitioner sees by the wisdom of unsurpassed stillness, but he has yet to attain its realization.
 {: #p15}
 
-16\. “Where will a monk who practices thus go? It’s like striking an iron that’s both glowing and flaming with a hammer, and a spark flies off it. It falls onto a little wood or grass that smokes or burns. Once it’s burning, it then sets fire to a town, a city, a forested mountain, or a wilderness. After it burns that town, city, forested mountain, or wilderness, it might reach a road, water line, or a plain and go out. You should know that monk to be likewise. With a little conceit that’s yet to end, he has cut the five lower bonds and will attain parinirvāṇa upstream in Akaniṣṭha. This is called the seventh place to which a good person goes. The world in truth does have such people
+16\. “Where will a monk who practices thus go? It’s like striking an iron that’s both glowing and flaming with a hammer, and a spark flies off it. It falls onto much wood or grass that smokes or burns. Once it’s burning, it then sets fire to a town, a city, a forested mountain, or a wilderness. After it burns that town, city, forested mountain, or wilderness, it might reach a road, water line, or a plain and go out. You should know that monk to be likewise. With a little conceit that’s yet to end, he has cut the five lower bonds and will attain parinirvāṇa upstream in Akaniṣṭha. This is called the seventh place to which a good person goes. The world in truth does have such people
 {: #p16}
 
 #### Nirvāṇa Without Remainder
@@ -96,7 +96,7 @@ The monks then accepted the teaching and listened.
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 25 February 2021
+Last Revised: 17 March 2021
 {: .revised}
 
 ---
