--- a/01_agama/madhyama/MA_009.md
+++ b/01_agama/madhyama/MA_009.md
@@ -75,30 +75,30 @@ He replied, “So it is.”
 
 He replied, “No.”
 
-18\. “Are you cultivating the religious practice of the ascetic Gautama because the mind is purified … views are purified … the hindrance of doubt is purified … knowing and seeing [430c] what is and isn’t the path is purified … knowing and seeing the steps of the path is purified… knowledge of the path’s steps to ending [suffering] is purified?”
+18\. “Are you cultivating the religious practice of the ascetic Gautama because the mind is purified … views are purified … the hindrance of doubt is purified … knowing and seeing [430c] what is and isn’t the path is purified … knowing and seeing the steps of the path is purified … knowledge of the path’s steps to ending [suffering] is purified?”
 {:#p18}
 
 He replied, “No.”
 
-19\. Again, Śāriputra asked, “I’ve put the question to you, ‘Good man, are you cultivating the religious practice of the ascetic Gautama?’ and you said, ‘So it is.’ Then I asked, ‘Good man, are you cultivating the religious practice of the ascetic Gautama because the precepts are purified?’ and you said, ‘No.’ … ‘Are you cultivating the religious practice of the ascetic Gautama because the mind is purified … views are purified … the hindrance of doubt is purified … knowing and seeing what is and isn’t the path is purified … knowing and seeing the steps of the path is purified… knowledge of the path’s steps to ending [suffering] is purified?’ and you said, ‘No.’ What then is the purpose of cultivating the religious practice of the ascetic Gautama?”
+19\. Again, Śāriputra asked, “I’ve put the question to you, ‘Good man, are you cultivating the religious practice of the ascetic Gautama?’ and you said, ‘So it is.’ Then I asked, ‘Good man, are you cultivating the religious practice of the ascetic Gautama because the precepts are purified?’ and you said, ‘No.’ … ‘Are you cultivating the religious practice of the ascetic Gautama because the mind is purified … views are purified … the hindrance of doubt is purified … knowing and seeing what is and isn’t the path is purified … knowing and seeing the steps of the path is purified … knowledge of the path’s steps to ending [suffering] is purified?’ and you said, ‘No.’ What then is the purpose of cultivating the religious practice of the ascetic Gautama?”
 {:#p19}
 
 He replied, “Good man, it’s because of nirvāṇa without remainder.”
 
-20\. Again, he asked, “Why, good man? Does the ascetic Gautama declare that nirvāṇa without remainder is because the precepts are purified?”
+20\. Again, he asked, “Why, good man? Does the ascetic Gautama declare that nirvāṇa without remainder because the precepts are purified?”
 {:#p20}
 
 He replied, “No.”
 
-21\. “Does the ascetic Gautama declare that nirvāṇa without remainder is because the mind is purified … views are purified … the hindrance of doubt is purified … knowing and seeing what is and isn’t the path is purified … knowing and seeing the steps of the path is purified… knowledge of the path’s steps to ending [suffering] is purified?”
+21\. “Does the ascetic Gautama declare that nirvāṇa without remainder because the mind is purified … views are purified … the hindrance of doubt is purified … knowing and seeing what is and isn’t the path is purified … knowing and seeing the steps of the path is purified … knowledge of the path’s steps to ending [suffering] is purified?”
 {:#p21}
 
 He replied, “No.”
 
-22\. Again, Śāriputra asked, “I’ve put the question to you, sir, ‘Does the ascetic Gautama declare that nirvāṇa without remainder is because the precepts are purified?’ and you said, ‘No.’ … ‘Does the ascetic Gautama declare that nirvāṇa without remainder is because the mind is purified … views are purified … the hindrance of doubt is purified … knowing and seeing what is and isn’t the path is purified … knowing and seeing the steps of the path is purified… knowledge of the path’s steps to ending [suffering] is purified?’ and you said, ‘No.’ Good man, what do you mean by what you’ve said? How can I know?’”
+22\. Again, Śāriputra asked, “I’ve put the question to you, sir, ‘Does the ascetic Gautama declare that nirvāṇa without remainder because the precepts are purified?’ and you said, ‘No.’ … ‘Does the ascetic Gautama declare that nirvāṇa without remainder because the mind is purified … views are purified … the hindrance of doubt is purified … knowing and seeing what is and isn’t the path is purified … knowing and seeing the steps of the path is purified … knowledge of the path’s steps to ending [suffering] is purified?’ and you said, ‘No.’ Good man, what do you mean by what you’ve said? How can I know?’”
 {:#p22}
 
-He answered, “Good man, if the Bhagavān, the ascetic Gautama, declared that nirvāṇa without remainder is because the precepts are purified, then he would be saying [something with] a remainder has no remainder. If the Bhagavān, the ascetic Gautama, declared that nirvāṇa without remainder is because the mind is purified … views are purified … the hindrance of doubt is purified … knowing and seeing what is and isn’t the path is purified … knowing and seeing the steps of the path is purified… knowledge of the path’s steps to ending [suffering] is purified, then he would be saying [something with] a remainder has no remainder.
+He answered, “Good man, if the Bhagavān, the ascetic Gautama, declared that nirvāṇa without remainder because the precepts are purified, then he would be saying [something with] a remainder has no remainder. If the Bhagavān, the ascetic Gautama, declared that nirvāṇa without remainder because the mind is purified … views are purified … the hindrance of doubt is purified … knowing and seeing what is and isn’t the path is purified … knowing and seeing the steps of the path is purified … knowledge of the path’s steps to ending [suffering] is purified, then he would be saying [something with] a remainder has no remainder.
 
 23\. “Good man, if the Bhagavān declared that nirvāṇa without remainder was to part with these things, then ordinary people would [enter] parinirvāṇa because they part with these things, too.
 {:#p23}
@@ -129,13 +129,13 @@ He answered, “Good man, if the Bhagavān, the ascetic Gautama, declared that n
 
 “The king said, ‘No.’
 
-30\. “Good man, being repeatedly question, what did the king of Kośala Prasenajit say? The king answered that crowd of ministers, ‘I was in Śrāvastī and had some business in Śāketa. I thought, ‘What’s a way to travel from Śrāvastī to Śāketa in a single day?’ Then I thought, ‘Now, for me to go from Śrāvastī to Śāketa, I would need to place seven chariots between them.
+30\. “How was it, good man? Being repeatedly questioned, what did the king of Kośala Prasenajit say? The king answered that crowd of ministers, ‘I was in Śrāvastī and had some business in Śāketa. I thought, ‘What’s a way to travel from Śrāvastī to Śāketa in a single day?’ Then I thought, ‘Now, for me to go from Śrāvastī to Śāketa, I would need to place seven chariots between them.
 {:#p30}
 
 31\. “‘I then had seven chariots placed between Śrāvastī and Śāketa. After the seven chariots were arranged, I left Śrāvastī and went to the first chariot. I rode the first chariot to the second chariot and dismounted from the first chariot. I rode the second chariot to the third chariot and dismounted [431b] from the second chariot. I rode the third chariot to the fourth chariot and dismounted from the third chariot. I rode the fourth chariot to the fifth chariot and dismounted from the fourth chariot. I rode the fifth chariot to the sixth chariot and dismounted from the fifth chariot. I rode the sixth chariot to the seventh chariot and dismounted from the sixth chariot. Riding the seventh chariot, I reached Śāketa in a single day.’
 {:#p31}
 
-32\. “So it was, good man. The king of Kośala Prasenajit thus replied to that crowd of ministers’ questions. So it is, good man, that it’s because the precepts are purified that the mind can be purified … because the mind is purified that views can be purified … because views are purified tha the hindrance of doubt can be purified … because the hindrance of doubt is purified that knowing and seeing what is and isn’t the path can be purified … because knowing and seeing what is and isn’t the path is purified that knowing and seeing the steps of the path can be purified … because knowing and seeing the steps of the path is purified that knowledge of the path’s steps to ending [suffering] can be purified … because knowledge of the path’s steps to ending [suffering] is purified that the Bhagavān declares nirvāṇa without remainder.”
+32\. “Thus, good man, did the king of Kośala Prasenajit answer that crowd of ministers’ questions. Thus, good man, it’s because the precepts are purified that the mind can be purified … because the mind is purified that views can be purified … because views are purified that the hindrance of doubt can be purified … because the hindrance of doubt is purified that knowing and seeing what is and isn’t the path can be purified … because knowing and seeing what is and isn’t the path is purified that knowing and seeing the steps of the path can be purified … because knowing and seeing the steps of the path is purified that knowledge of the path’s steps to ending [suffering] can be purified … because knowledge of the path’s steps to ending [suffering] is purified that the Bhagavān declares nirvāṇa without remainder.”
 {:#p32}
 
 #### Śāriputra and Pūrṇa Praise Each Other
@@ -157,7 +157,7 @@ Venerable Pūrṇa Maitrāyaniputra answered, “Good man, I’m called Pūrṇa
 37\. Venerable Śāriputra answered, “Good man, my name is Upatiṣya. My mother’s name is Śārī, so religious practitioners call me Śāriputra.”
 {:#p37}
 
-38\. Venerable Pūrṇa Maitrāyaniputra praised him, “Now, I didn’t know I was talking to this disciple of the Bhagavān. I didn’t I was talking to the second-most honored one. I didn’t know I was talking to the Dharma general. I didn’t know I was talking to the disciple who turned the turning Dharma wheel again. If I knew this was Venerable Śāriputra, [431c] I wouldn’t have been able to answer a single thing. How could I have given a discourse as profound as that?
+38\. Venerable Pūrṇa Maitrāyaniputra praised him, “Now, I didn’t know I was talking to this disciple of the Bhagavān. I didn’t know I was talking to the second-most honored one. I didn’t know I was talking to the Dharma general. I didn’t know I was talking to the disciple who turned the Dharma wheel again. If I knew this was Venerable Śāriputra, I wouldn’t have been able to answer a single thing. How could I have given a discourse as profound as that?
 {:#p38}
 
 39\. “Good, good! Venerable Śāriputra is a disciple of the Tathāgata who’s been made intelligent, insightful, and discerning by him. He’s peaceful, fearless, accomplished, and disciplined. He has gained great eloquence, attained the banner of immortality, and himself realized the accomplishment of the immortal element. That’s because the venerable asks profound questions.
@@ -179,7 +179,7 @@ Venerable Pūrṇa Maitrāyaniputra answered, “Good man, I’m called Pūrṇa
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 8 March 2021
+Last Revised: 17 March 2021
 {: .revised}
 
 ---
