Added DA 24, SA 1.19-22.

--- a/01_agama/dirgha/DA_27.md
+++ b/01_agama/dirgha/DA_27.md
@@ -3,7 +3,7 @@ layout: default
 title: The Long Discourses | 27. The Fruits of the Ascetics
 type: kramdown
 base: ../../
-previous: index.html
+previous: DA_24.html
 next: DA_29.html
 ---
 # [The Long Discourses](index.html)
