--- a/01_agama/dirgha/DA_11.md
+++ b/01_agama/dirgha/DA_11.md
@@ -3,7 +3,7 @@ layout: default
 title: The Long Discourses | 11. Increasing One by One
 type: kramdown
 base: ../../
-previous: index.html
+previous: DA_4.html
 next: DA_12.html
 ---
 # [The Long Discourses](index.html)
